<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    android:orientation="vertical"
    android:background="@color/purple_700"
    tools:context=".UI.Main.ImcCalculatorFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/viewMale"
                app:cardBackgroundColor="@color/background_fragment"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="24dp"
                app:layout_constraintEnd_toStartOf="@+id/viewFemale"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewMale"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/imagen_hombre"
                    android:src= "@drawable/icon_male"
                    android:layout_marginTop="20.dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/hombre"
                    android:textColor="@color/textColors"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/viewFemale"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:cardBackgroundColor="@color/background_fragment"
                app:cardCornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewMale"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewFemale"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/imagen_mujer"
                    android:src= "@drawable/icon_female"
                    android:layout_marginTop="20.dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/mujer"
                    android:textColor="@color/textColors"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_slider"
            android:layout_width="match_parent"
            android:layout_height="150.dp"
            app:cardBackgroundColor="@color/background_fragment"
            app:cardCornerRadius="20dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/altura"
                    android:textColor="@color/textColors"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/height_min"
                    android:textColor="@color/purple_200"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/rs_height"
                    android:layout_width="match_parent"
                    android:layout_height="20.dp"
                    android:value = "150.0"
                    android:valueFrom="150.0"
                    android:valueTo="220.0"
                    android:foregroundTint="@color/teal_200"
                    android:contentDescription="@string/selecciona_el_rango_de_valores"
                    >


                </com.google.android.material.slider.RangeSlider>


            </LinearLayout>



        </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginVertical="24dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_age"
            app:cardBackgroundColor="@color/background_fragment"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintEnd_toStartOf="@+id/cv_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/edad"
                    android:textColor="@color/textColors"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="20 años"
                    android:textColor="@color/textColorsSecondary"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fb_plusage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        app:backgroundTint="@color/purple_500"
                        android:src="@drawable/baseline_add_24"
                        app:tint="@color/purple_200"
                        />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fb_subtrackage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        app:backgroundTint="@color/purple_500"
                        android:src="@drawable/baseline_remove_24"
                        app:tint="@color/purple_200"
                        />

                </LinearLayout>



            </LinearLayout>



        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_weight"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/background_fragment"
            app:cardCornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_age"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/peso"
                    android:textColor="@color/textColors"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="60 kg"
                    android:textColor="@color/textColorsSecondary"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fb_plusweight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/baseline_add_24"
                    app:tint="@color/purple_200"

                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fb_subtrackweight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/baseline_remove_24"
                    app:tint="@color/purple_200"
                    />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_calculate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/background_fragment"
            android:text="CALCULAR"
            android:textColor="@color/purple_500"
            android:textSize="24.dp"
            android:textStyle="bold"
            app:cornerRadius="24dp" />


    </LinearLayout>



    <!-- LINEAR LAYOUT EXTERIOR -->
</LinearLayout>
